src/main/WebApp/landing/platform.ou.edu/main.css
/* ... */
#about-janux p {
	font-size: 1.125rem;
	font-weight: 400;
	-webkit-font-smoothing: antialiased;
}

#feature {
	overflow: hidden;
}

#feature .course {
	background-color: #f0ede5;
	padding: 2em 0 2em 35px;
	overflow: hidden;
	width: 744px;
	float: left;
	box-shadow: inset -1px 0 0 0 #e6e2d6, inset 0 1px 0 #e6e2d6, inset 0 -1px 0 0 #e6e2d6;
}

#feature .course img {
	width: 235px;
	float: left;
}

#feature .course .meta {
	float: left;
	width: 460px;
	padding-left: 1em;
}

#feature .course .meta span {
	text-transform: uppercase;
	font-size: 0.625rem;
	font-weight: 700;
	line-height: 0.5em;
	color: #962022;
}

#feature .course .meta h4 {
	color: #786f56;
	font-size: 1.875rem;
	line-height: 0.5em;
	text-transform: uppercase;
	font-weight: 600;
	font-family: 'Open Sans Condensed', Arial, Helvetica, sans-serif;
}

#feature .course .meta p {
	font-weight: 300;
	font-size: 0.95rem;
	color: #494949;
}

#feature .enrollment-options {
	background-color: #f5f4ef;
	float: left;
	width: 280px;
	box-shadow: inset 0 1px 0 #e6e2d6, inset 0 -1px 0 #e6e2d6;
}

#feature .enrollment-options .option {
	padding: 1em 3em;
	height: 114px;
	text-align: center;
}

#feature .enrollment-options .option.first {
	box-shadow: inset 0 -1px 0 #e6e2d6;
}

#feature .enrollment-options .option .price .current {
	font-size: 2rem;
	line-height: 2rem;
	font-weight: 600;
	display: inline-block;
	color: #358bc1;
}

#feature .enrollment-options .option .price .old {
	line-height: 2rem;
	font-size: 1.125rem;
	text-decoration: line-through;
	display: inline-block;
	vertical-align: top;
	color: #b8b8b8;
}

#feature .enrollment-options .option h5 {
	line-height: 1.5em;
	color: #786f56;
	font-weight: 600;
	font-size: 0.875rem;
	font-family: 'Open Sans Condensed', Arial, Helvetica, sans-serif;
} 

/*course detail view*/

/*custom tags*/
next, previous, close, controls, controls * {	display: block; }
#container .courses { background: #fff; }

div.subpage {
	margin: 0 auto;
	padding: 100px 0 0 0;
	background: #ccc; /*see gaps*/
	background-position: center center;
	background-repeat: no-repeat;
	background-size: 100% 100%; /*fallback for no cover support*/
	background-size: cover;
	position: relative !important;
	overflow: hidden;

}

div.subpage > * {
	width: 920px;
	position: relative;
	margin: 0 auto 5px;
	background: #fff;
	color: #494949;
	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
}

.pointer-events div.subpage > *::after {
	content: '';
	position: absolute;
	pointer-events: none;
	background: none;
	top:0; left:0; right:0; bottom:0;
	box-shadow: inset 0 0 0 1px rgba(255,255,255,0.1);
	z-index: 2;
}


div.subpage .course-header {
	position: relative;
	top: -70px;
	height: 42px;
	background: none;
	margin-bottom: -50px;
}
div.subpage > .course-header::after{display:none;}

div.subpage controls {
	display: block;
	position: absolute;
	overflow: hidden;
	right: 0;
}

div.subpage next,
div.subpage a.next, {
	margin: 0 2px;
}

div.subpage next,
div.subpage previous,
div.subpage close,
div.subpage a.next,
div.subpage a.previous,
div.subpage a.close,
#about close {
	float: right;
	display: inline-block;
	background-color: #000;
	background-color: rgba(0,0,0,0.9);
	background-positoin: center center;
	background-repeat: no-repeat;
	width: 40px;
	height: 40px;
	cursor: pointer;
	opacity: 0.3;
	text-indent: -40px;/*hide the text in the tag*/
	overflow: hidden;
}
div.subpage next:hover,
div.subpage previous:hover,
div.subpage close:hover,
div.subpage a.next:hover,
div.subpage a.previous:hover,
div.subpage a.close:hover {
	background-color: rgba(0,0,0,0.2);
	opacity:1;
}

div.subpage close,
div.subpage a.close {
	background-image: url(images/ico_close.png);
}
div.subpage previous,
div.subpage a.previous {
	background-image: url(images/ico_arrow_back.png);
}
div.subpage next,
div.subpage a.next {
	background-image: url(images/ico_arrow_forward.png);
}


div.subpage .course-introduction {
	margin-bottom: 0;
}

div.subpage .course-introduction::before {
/*	content: url(images/january-2014-banner.png); */
	position: absolute;
	pointer-events: none;
	background: none;
	top:0; left:0;
	z-index: 1;
}

div.subpage .promovideo {
	background: #ccc;
	min-xheight: 466px;
/*	max-height: 530px;*/
	overflow: hidden;
}

iframe {
	margin: 0 0 -5px 0 !important;
}

div.subpage .course-title {
	background: black;
	color: #fff;
	text-transform: uppercase;
	padding: 5px 20px;
	font: normal bold 32px/55px 'Open Sans Condensed', 'Open Sans', Arial, Helvetica, sans-serif;
}


div.subpage .course-description, #about p {
	padding: 15px 20px 50px;
	font-size: 14px;
	font-weight: 300;
	line-height: 2em;
}
div.subpage .course-faq {
	padding: 15px 20px 30px;
	font-size: 14px;
	line-height: 1.75em;
}
div.subpage .course-faq .label {
	margin-bottom: 10px;
}

div.subpage .details {
	overflow: hidden;
}

div.subpage .course-open-course-note.half {
	width: 50%;
	float: left;
}

div.subpage .course-open-course-note {
	background: #f2f2f2;
	padding: 20px;
	box-sizing: border-box;
}

div.subpage p {
	font-size: 14px;
	line-height: 1.75em;
	margin: 0.5em 0;
}

div.subpage .course-open-course-note p {
	color: #747475;
}

div.subpage .course-details h3,
div.subpage .course-open-course-note h3 {
	font-style: normal;
	font-weight: 300;
	font-size: 22px;
	line-height: 35px;
}

div.subpage .enrollment-options {
	overflow: hidden;
	background-color: #f2f2f2;
}

div.subpage .enrollment-options .enrollment-option {
	padding: 20px;
}

div.subpage .enrollment-options .enrollment-option.half {
	float: left;
	width: 50%;
}

div.subpage .enrollment-options .enrollment-option.leading {
	box-shadow: 2px 0 0 0 white;
}

div.subpage .enrollment-option h3 {
	font-size: 1.5rem;
	font-weight: 300;
}

div.subpage .enrollment-option p {
	margin: 0;
	font-weight: 600;
	font-size: 1rem;
}
/* ... */

